--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.0",
+    "@notionhq/client": "^5.9.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.10.5",
-    "mongodb": "^3.5.9",
-    "next": "12.2.5",
+    "dotenv": "^17.2.4",
+    "framer-motion": "^12.34.3",
+    "gsap": "^3.14.2",
+    "jest": "^29.7.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^9.1.6",
+    "next": "^13.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-maps": "^3.0.0",
-    "sass": "^1.62.1"
+    "react-syntax-highlighter": "^16.1.0",
+    "sass": "^1.62.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
-    "@types/mongodb": "^4.0.7",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
