--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": "24.x"
+  },
   "dependencies": {
     "@notionhq/client": "^5.9.0",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -19,7 +22,7 @@
     "jest": "^29.7.0",
     "mongodb": "^6.3.0",
     "mongoose": "^9.1.6",
-    "next": "^13.5.0",
+    "next": "^16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-maps": "^3.0.0",
